--- a/src/main/resources/templates/change-requests.html
+++ b/src/main/resources/templates/change-requests.html
@@ -23,7 +23,7 @@
                 <a href="/admin/user-management/1">Users</a>
                 <div class="dropdownNav-content">
                     <a class="btn btn-default" href="/change-requests">Change Requests</a>
-                    <a class="btn btn-default" href="/admin/assign-users">Assign <Users></Users></a>
+                    <a class="btn btn-default" href="/admin/assign-users">Assign Users</a>
                 </div>
             </li>
             <li th:if="${role} == 'USER' or ${role} == 'TL' or ${role} == 'PM'" class="dropdownNav active">
@@ -71,7 +71,7 @@
                     <tbody>
                     <tr th:each="changeRequest: ${requests}">
                         <td th:text="${changeRequest.id}">1</td>
-                        <td th:text="${changeRequest.Type}">Test</td>
+                        <td th:text="${changeRequest.type.name()}">Test</td>
                         <td th:text="${changeRequest.oldValue}">Class</td>
                         <td th:text="${changeRequest.newValue}">Class</td>
                         <td><span th:text="${changeRequest.User.firstName}"></span>&nbsp;<span th:text="${changeRequest.User.lastName}"></span></td>
