--- a/src/main/resources/templates/meeting-room-details.html
+++ b/src/main/resources/templates/meeting-room-details.html
@@ -116,11 +116,48 @@
                            class="btn btn-danger" onclick="return confirm('Are you sure you want to Delete this room?');">Delete
                         </a>
                     </td>
-                    <td th:if="${role} == 'USER' or ${role} == 'TL' or ${role} == 'PM'">
+                    <!--<td th:if="${role} == 'USER' or ${role} == 'TL' or ${role} == 'PM'">
                         <form th:if="${temp} == 1"
                            th:action="@{'/bookRoom/'+${meetingRoom.id}+ '/'+${startTime}+ '/'+${endTime}}"
                               method="post">
                             <input type="submit" class="btn btn-primary" value="Book" />
+                        </form>
+                    </td>-->
+                    <td th:if="${role} == 'USER' or ${role} == 'TL' or ${role} == 'PM'">
+                        <form th:if="${temp} == 1"
+                              th:action="@{'/bookRoom/'+${meetingRoom.id}+ '/'+${startTime}+ '/'+${endTime}}"
+                              method="post">
+                            <!-- Button to Trigger Modal -->
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+                                Book</button>
+                            <!-- Modal -->
+                            <div class="modal fade" id="myModal" role="dialog">
+                                <div class="modal-dialog modal-sm">
+                                    <!-- Modal content-->
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                            <h4 class="modal-title">Check your booking details...</h4>
+                                        </div>
+                                        <div class="modal-body">
+                                            <div class="table-responsive">
+                                                <table class="table table-hover">
+                                                    <tr><td><span>Meeting Room:</span>&nbsp;&nbsp;
+                                                        <span th:text="${meetingRoom.name}"></span></td></tr>
+                                                    <tr><td><span>Start Time:</span>&nbsp;&nbsp;
+                                                        <span th:text="${startTime}"></span></td></tr>
+                                                    <tr><td><span>End Time:</span>&nbsp;&nbsp;
+                                                        <span th:text="${endTime}"></span></td></tr>
+                                                </table>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <input type="submit" class="btn btn-primary" value="Confirm Booking" />
+                                            <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </form>
                     </td>
                 </tr>
