--- a/src/main/resources/templates/user/profile-change-requests.html
+++ b/src/main/resources/templates/user/profile-change-requests.html
@@ -60,12 +60,12 @@
                     </thead>
                     <tbody>
                     <tr th:each="changeRequest: ${requests}">
-                        <td th:text="${changeRequest.Type}">Test</td>
+                        <td th:text="${changeRequest.type}">Test</td>
                         <td th:text="${changeRequest.oldValue}">Class</td>
                         <td th:text="${changeRequest.newValue}">Class</td>
                         <td th:text="${changeRequest.status}">Pending</td>
 
-                        <td th:if="${changeRequest.status} == 'Pending'">
+                        <td th:if="${changeRequest.status == T(neo.spring5.MeetingRoomBooking.models.Status).Pending}">
                             <form th:action="@{/user/cancelChangeRequest/{id}(id=${changeRequest.id})}" method="post">
                                 <button class="btn btn-danger" name="confirm"
                                         type="Submit">Cancel Request</button>
