--- a/src/main/resources/templates/change-requests.html
+++ b/src/main/resources/templates/change-requests.html
@@ -69,6 +69,7 @@
                     </tr>
                     </thead>
                     <tbody>
+                    <tr th:if="${noRecords}"><td colspan="7" style="font-size: 20; color:#FF1C19; text-align:center" th:utext="${noRecords}">no records</td></tr>
                     <tr th:each="changeRequest: ${requests}">
                         <td th:text="${changeRequest.id}">1</td>
                         <td th:text="${changeRequest.type}">Test</td>
